[package]
name = "webpki-roots"
version = "0.21.0"
edition = "2021"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
description = "Mozilla's CA root certificates for use with webpki"
homepage = "https://github.com/ctz/webpki-roots"
repository = "https://github.com/ctz/webpki-roots"

[dependencies]
webpki = { git = "https://github.com/NexTokenTech/webpki-sgx", branch = "mesalock_sgx" }
sgx_tstd = { git="https://github.com/NexTokenTech/incubator-teaclave-sgx-sdk.git",  version="1.1.6", optional = true }

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
